fix - Pendulum canvas too big for vertical screen

--- a/app/sketches/double_pendulum/page.scss
+++ b/app/sketches/double_pendulum/page.scss
@@ -17,6 +17,6 @@
 
     #canvas
     {
-        height: 90%;
+        height: 90vmin;
     }
 }
